Fixes the bug: if the sidebar is visible and the window width is less than 768px, the content of the conversation detail is not completely visible

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -15,6 +15,10 @@
     display: none;
 }
 
+.router-outlet-margin-left {
+    left: 60px
+}
+
 // @media (min-width: 768px) {
 //     .split-pane-md.split-pane-visible > .split-pane-side {
 //         min-width: 312px;
